--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <font face=“Arial”>
 <h2> 1st Quarter Projects </h2>
 <br/>
-Click <a href ="website/hero.html"> here </a> for a website about my hero. 
+Click <a href ="hero.html"> here </a> for a website about my hero. 
 <br/>
 Click <a href ="https://www.pexels.com/search/sunset/"> here </a> for a cool website. 
 
