--- a/hero.html
+++ b/hero.html
@@ -15,7 +15,7 @@ My hero is Andy Murray.
 Click <a href ="https://en.wikipedia.org/wiki/Andy_Murray"> here </a> for a webiste about him. 
 <br/>
 
-<img src ="https://www.telegraph.co.uk/content/dam/tennis/2021/06/30/TELEMMGLPICT000262930158_trans_NvBQzQNjv4BqeK8ehqBZJSTiVTgumtathXIRGG1hOd5uTj-FjhQjiAg.jpeg" width ="300"> 
+<img src ="images/andymurray" width ="300"> 
 
 <p> Andy Murray is a Scottish tennis player. He was born in Glasgow, Scotland in 1987. 
 He is a professional tennis player who has won three Grand Slam titles which include 
