--- a/hero.html
+++ b/hero.html
@@ -17,11 +17,20 @@ Click <a href ="https://en.wikipedia.org/wiki/Andy_Murray"> here </a> for a webi
 
 <img src ="images/andymurray" width ="300"> 
 
-<p> Andy Murray is a Scottish tennis player. He was born in Glasgow, Scotland in 1987. 
-He is a professional tennis player who has won three Grand Slam titles which include 
-two at Wimbeldon and one at the US Open. He plays mostly singles tennis, but is also 
-known for playing doubles tennis. In addition to Andy Murray, his brother Jamie Murray
-is also a skilled and professioanl tennis player.
+<p>Andy Murray is a Scottish tennis player. He was born in Glasgow, Scotland in 1987. 
+  He is a professional tennis player who has won three Grand Slam titles which include
+  two at Wimbledon and one at the US Open. He plays mostly singles tennis, but is also
+  known for playing doubles tennis. In addition to Andy Murray, his brother Jamie Murray
+  is also a skilled and professional tennis player, but is more known for doubles tennis. 
+<br/>
+I chose Andy Murray as my hero because of his dedication to the tennis world. When I 
+  was younger I would spend Sunday afternoons watching him play at Wimbledon or the 
+  open at the time. I think that it is important for young people to see others who 
+  have such strong dedication to a sport or passion. Also, in recent years he has not
+  been able to play as much as he wants to due to injury, yet is still trying to 
+  continue to play. I think that the love he shows for tennis inspires me to find
+  something that I can feel that passionately about. 
+
 
 
 
