--- a/hero.html
+++ b/hero.html
@@ -30,7 +30,9 @@ I chose Andy Murray as my hero because of his dedication to the tennis world. Wh
   been able to play as much as he wants to due to injury, yet is still trying to 
   continue to play. I think that the love he shows for tennis inspires me to find
   something that I can feel that passionately about. 
-
+<br/>
+<br/>
+Click <a href ="index.html"> here <a/> for my index page. 
 
 
 
