--- a/hero.html
+++ b/hero.html
@@ -4,7 +4,7 @@
 </head> 
 
 <body background="images/bkgnd1.gif">
-<font color="black" face="Arial"> 
+<font color="blue" face="Arial"> 
 
 <center> 
 <h1> Hero Website</h1> 
