--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <font face=“Arial”>
 <h2> 1st Quarter Projects </h2>
 <br/>
+Click <a href= "javascript.html"> here</a> for my javascript page. 
+<br/>
 Click <a href ="hero.html"> here </a> for a website about my hero. 
 <br/>
 Click <a href ="https://www.pexels.com/search/sunset/"> here </a> for a cool website. 
