--- a/javascript.html
+++ b/javascript.html
@@ -10,7 +10,7 @@ function greeting1()
 function greeting2()
 { 
 	var name = prompt("type your name");
-
+	alert ("Hi, " +name); 
 											// is the assignment operator
 											//This assigns the element on
 											//the right ot the element 
