--- a/slideshow.html
+++ b/slideshow.html
@@ -4,12 +4,12 @@
 
  var counter= 0;
 
-var picList= [ "images/slideshow/slide1.jpg", 
-				 "images/slideshow/slide2.jpg", 
-				 "images/slideshow/slide3.jpg", 
-				 "images/slideshow/slide4.jpg", 
-				 "images/slideshow/slide5.jpg", 
-				"images/slideshow/slide6.jpg"]
+var picList= [ "images/slide1.jpg", 
+				 "images/slide2.jpg", 
+				 "images/slide3.jpg", 
+				 "images/slide4.jpg", 
+				 "images/slide5.jpg", 
+				"images/slide6.jpg"]
 				
 var clipList= ["sounds/slide1bukayosaka.mp3",
 				"sounds/slide2raheemsterling.mp3",
