--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h1> My AP CSP Website. </h1> 
 <font face=“Arial”>
-<h2> 1st Quarter Projects </h2>
+<h2> 1st Semester Projects </h2>
 <br/>
 Click <a href= "encryption.html"> here <a/> for me encryption page. 
 <br/>
@@ -22,7 +22,9 @@ Click <a href= "javascript.html"> here</a> for my javascript page.
 Click <a href ="hero.html"> here </a> for a website about my hero. 
 <br/>
 Click <a href ="https://www.pexels.com/search/sunset/"> here </a> for a cool website. 
-
+<br/> 
+<h3> 2nd Semester Projects </h3> 
+Click <a href= "vocabQuiz.html"> here <a/> for a vocab quiz. 
 <br/>
 <br/>
 <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/sunset-quotes-21-1586531574.jpg" width ="300"/> 
