--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <font face=“Arial”>
 <h2> 1st Semester Projects </h2>
 <br/>
-Click <a href= "encryption.html"> here <a/> for me encryption page. 
+Click <a href= "copyright.html"> here <a/> for my copyright page. 
+<br/>
+Click <a href= "encryption.html"> here <a/> for my encryption page. 
 <br/>
 Click <a href= "slideshow.html"> here </a> for my slideshow. 
 <br/>
